feat: add and style header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header container">
+        <a class="header__logo" href="#"><img class="logo__image" src="/images/logo.png" alt="Logo"></a>
+        <form action="#" class="search__form">
+            <input class="search__input" type="search" placeholder="Блюда">
+            <button class="search__button">
+                <img class="search__icon" src="/images/search-icon.svg" alt="search icon">
+            </button>
+        </form>
+
+        <div class="auth">
+            <a class="login" href="#" >Войти</a>
+        </div>
+        <a class="shopping__card" href="#" >
+            <img src="/images/fi-rr-shopping-cart.svg" alt="shopping__bucket">
+            <span class="shopping__notify">11</span>
+        </a>
+    </header>
 </body>
 </html>
