--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header container">
         <a class="header__logo" href="#"><img class="logo__image" src="/images/logo.png" alt="Logo"></a>
         <form action="#" class="search__form">
-            <input class="search__input" type="search" placeholder="Блюда">
+            <input class="search__input" type="input" placeholder="Блюда">
             <button class="search__button">
                 <img class="search__icon" src="/images/search-icon.svg" alt="search icon">
             </button>
