--- a/index.html
+++ b/index.html
@@ -26,5 +26,16 @@
             <span class="shopping__notify">11</span>
         </a>
     </header>
+
+    <main class="container">
+        <div class="slider">
+            <div class="slide slide-light slide-summer">
+                <h2 class="slide__title ">Неделя летних овощей</h2>
+                <p class="slide__text">Специальная овощная корзина. Новые продукты, специальные цены, скидки!</p>
+                <a class="slide__button slide__button-primary" href="#" >Заказать со скидкой</a>
+            </div>
+            <span><img src="/images/left-array.png" alt=""></span>
+        </div>
+    </main>
 </body>
 </html>
