feat: add and style one promo card

--- a/index.html
+++ b/index.html
@@ -34,8 +34,23 @@
                 <p class="slide__text">Специальная овощная корзина. Новые продукты, специальные цены, скидки!</p>
                 <a class="slide__button slide__button-primary" href="#" >Заказать со скидкой</a>
             </div>
-            <span><img src="/images/left-array.png" alt=""></span>
         </div>
+
+        <section class="promo">
+            <div class="card card__text-light">
+                <div class="card__header">
+                    <h3 class="card__title">Сладкая корзина</h3>
+                    <p class="card__description">Произвольный выбор
+                        десертов по Вашему
+                        желанию.</p>
+                </div>
+                <div class="card__footer">
+                    <strong class="card__price">ОТ 1 300 ₽</strong>
+                    <span class="card__delivery">стоимость доставки до 200 ₽</span>
+                    <a href="" class="button button__default">Собрать корзину</a>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
