add and style a second promo card

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
                     <a href="" class="button button__default">Собрать корзину</a>
                 </div>
             </div>
+
+            <div class="card card__text-light">
+                <div class="card__header">
+                    <h3 class="card__title">Минимум усилий</h3>
+                    <p class="card__description">Произвольный выбор продуктов по Вашему желанию. </p>
+                </div>
+                <div class="card__footer">
+                    <strong class="card__price">ОТ 700 ₽</strong>
+                    <span class="card__delivery">стоимость доставки до 200 ₽</span>
+                    <a href="" class="button button__default">Собрать корзину</a>
+                </div>
+            </div>
         </section>
     </main>
 </body>
