feat: add delivery cards in the delivery section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delivery food</title>
+    <link rel="shortcut icon" href="/images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -60,6 +61,51 @@
                     <strong class="card__price">ОТ 700 ₽</strong>
                     <span class="card__delivery">стоимость доставки до 200 ₽</span>
                     <a href="" class="button button__default">Собрать корзину</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="delivery__section container">
+            <h2 class="delivery__title">Доставка готовой еды на неделю</h2>
+            <div class="delivery__cards">
+                <div class="delivery__card">
+                    <img class="delivery__image" src="/images/delivery-cards/01-zoh.png" alt="ЗОЖ карточка" >
+                    <span class="delivery__tag tag-helth">ЗОЖ</span>
+                </div>
+
+                <div class="delivery__card">
+                    <img class="delivery__image" src="/images/delivery-cards/02-vegetabes.png" alt="Карточка с овощами" >
+                    <span class="delivery__tag tag-vegetables">Овощное</span>
+                </div>
+
+                <div class="delivery__card">
+                    <img class="delivery__image" src="/images/delivery-cards/03-meat.png" alt="Карточка с мясом" >
+                    <span class="delivery__tag tag-meat">Мясное</span>
+                </div>
+
+                <div class="delivery__card">
+                    <img class="delivery__image" src="/images/delivery-cards/04-bird.png" alt="Карточка с курицой" >
+                    <span class="delivery__tag tag-bird">Птица</span>
+                </div>
+
+                <div class="delivery__card">
+                    <img class="delivery__image" src="/images/delivery-cards/05-fish.png" alt="Карточка с рыбой" >
+                    <span class="delivery__tag tag-fish">Рыбное</span>
+                </div>
+
+                <div class="delivery__card">
+                    <img class="delivery__image" src="/images/delivery-cards/06-kids.png" alt="Карточка с едой для детей" >
+                    <span class="delivery__tag tag-kids">Детское</span>
+                </div>
+
+                <div class="delivery__card">
+                    <img class="delivery__image" src="/images/delivery-cards/07-parents.png" alt="Карточка с едой для родителей" >
+                    <span class="delivery__tag tag-parents">Родителям</span>
+                </div>
+
+                <div class="delivery__card">
+                    <img class="delivery__image" src="/images/delivery-cards/08-holidays.png" alt="Карточка с праздничной едой" >
+                    <span class="delivery__tag tag-holidays">Праздничное</span>
                 </div>
             </div>
         </section>
