feat: add footer

--- a/index.html
+++ b/index.html
@@ -194,5 +194,22 @@
             
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+           <div class="footer__wrapper">
+            <a href="#"> <img class="footer__logo" src="/images/logo.png" alt="Footer Logo"> </a>
+            <nav class="footer__nav">
+                <a href="#" class="footer__link">Доставка и оплата</a>
+                <a href="#" class="footer__link">Напишите нам</a>
+            </nav>
+            <div class="social__links">
+                <a href="#" class="social__link"><img src="/images/social-links/telegram.svg" alt="Telegram" class="social__image"></a>
+                <a href="#" class="social__link"><img src="/images/social-links/vk.svg" alt="VK" class="social__image"></a>
+                <a href="#" class="social__link"><img src="/images/social-links/instagram.svg" alt="Instagram" class="social__image"></a>
+            </div>
+           </div>
+        </div>
+    </footer>
 </body>
 </html>
