feat: add shipping benefit cards

--- a/index.html
+++ b/index.html
@@ -190,8 +190,46 @@
         </div>
             <button class="tabs__button tabs__main-button">Больше блюд</button>
            </div>
-               
-            
+        </section>
+
+        <section class="benefits__section">
+            <div class="container">
+            <h2 class="benefits__name">Наши преимущества</h2>
+
+            <div class="benefits__cards">
+                <div class="benefits__card">
+                    <div class="benefits__wrapper">
+                    <img src="/images/benefits-cards/benefits-icon01.svg" alt="blabla" class="benefits__image">
+                    <h3 class="benefits__title">Какой путь проходит ваша еда</h3>
+                    <p class="benefits_description">Вы делаете заказ на коробку с недельным запасом полуфабрикатов и готовых блюд для всей семьи</p>
+                </div>
+                </div>
+
+                <div class="benefits__card">
+                    <div class="benefits__wrapper">
+                    <img src="/images/benefits-cards/benefits-icon02.svg" alt="blabla" class="benefits__image">
+                    <h3 class="benefits__title">Как происходит производство</h3>
+                    <p class="benefits_description">За день до доставки мы сами готовим блюда из натуральных продуктов без консервантов красителей и гмо</p>
+                </div>
+                </div>
+
+                <div class="benefits__card">
+                    <div class="benefits__wrapper">
+                    <img src="/images/benefits-cards/benefits-icon03.svg" alt="blabla" class="benefits__image">
+                    <h3 class="benefits__title">Высокие стандарты качества</h3>
+                    <p class="benefits_description">Наши повара с многолетним опытом с любовью готовят каждую порцию блюда</p>
+                </div>
+                </div>
+
+                <div class="benefits__card">
+                    <div class="benefits__wrapper">
+                    <img src="/images/benefits-cards/benefits-icon04.svg" alt="blabla" class="benefits__image">
+                    <h3 class="benefits__title">Быстрая и качественная доставка</h3>
+                    <p class="benefits_description">Сами доставим всё прямов в вашу морозилку, сохранив температурный режим и качество наших блюд</p>
+                </div>
+                </div>
+            </div>
+        </div>
         </section>
     </main>
 
